Fixed problems: container class was being assigned to div and section - spacing wasnt working properly

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -8,7 +8,6 @@ html {
 }
 *, *:before, *:after {
   box-sizing: inherit;
-  font-family: 'Roboto Condensed', sans-serif;
 }
 
 /*
@@ -19,17 +18,20 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- 
-
  .container {
   width: 450px;
+  /* margin: 70px auto; */
   margin: 0 auto;
-  margin-top: 140px; 
+  margin-top: 80px;
+  padding: 40px 0;
+  
   background-color: white;
  }
+
